--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
-{
+{"scripts": {
+  "start": "node server.js"
+}
   "name": "evai",
   "version": "1.0.0",
   "description": "EVAI - Emotionally Intelligent AI",
